--- a/src/app/pages/recipe-list/recipe-list.component.html
+++ b/src/app/pages/recipe-list/recipe-list.component.html
@@ -28,8 +28,14 @@
                   <li class="list-group-item">{{item.reviewCount}}</li>
                   <li class="list-group-item">{{item.mealType}}</li>
                 </ul>
+              <div class="row">
+                <div class="col-2">
+                  <button class=" btn btn-primary">Favorito</button>
+                </div>
               </div>
-
+               
+            
+              </div>
         </div>
     </div>
 </div>
